--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="resume">
         <div class="container">
             <div class="resume__block">
-                <h1 class="contact-info__header">Bulka</h1>
+                <h1 class="contact-info__header">Stepan Bandera</h1>
                 <h3 class="contact-info__sub-header">Senior Hooman Manager</h3>
 
                 <div class="contact_info_container fh">
@@ -29,7 +29,7 @@
                     </div>
 
                     <div class="contact-info__block contact-info__block--center">
-                        <img class="contact-info__avatar" src="assets/avatar.jpg" alt="Avatar">
+                        <img class="contact-info__avatar" src="assets/SBandera.jpg" alt="Avatar">
                     </div>
 
                     <div class="contact-info__block">
