--- a/index.html
+++ b/index.html
@@ -54,10 +54,8 @@
                             </path>
                         </svg>
                     </div>
-                    <p class="intro_text">Meow.
-                        I am a Binary Studio cat. Still got 7 lives. Work in IT, Full Stack Evil,
-                        all I do is sleep and try to help out hoomans with their projects whenever
-                        they need me.
+                    <p class="intro_text">
+                        Якщо народ обирає свободу, він матиме хліб, вирощений ним самим і ніким не відібраний.
                     </p>
                 </div>
             </div>
