--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
                         Якщо народ обирає свободу, він матиме хліб, вирощений ним самим і ніким не відібраний.
                     </p>
                 </div>
+
+                <div class="skills">
+                    <h3 class="skills__header">Skills</h3>
+                    <p class="skills__text">Просвітницька діяльність, згуртовувати українців</p>
+                </div>
             </div>
         </div>
     </div>
