--- a/index.html
+++ b/index.html
@@ -66,7 +66,24 @@
 
                 <div class="main-info fh">
 
-                    <div class="experiences"></div>
+                    <div class="experiences">
+                        <h3 class="experiences__header">Experience</h3>
+                        <div class="experiences__company">
+                            <div class="experiences__company-header">
+                                <span class="experiences__company-header-durability">For whole my life</span>
+                                <h3 class="experiences__company-header-name">Згуртування українців</h3>
+                            </div>
+
+                            <div class="experiences__company-project">
+                                <span class="experiences__company-project-role">Просвітництво</span>
+                                <h3 class="experiences__company-project-name">Hooman project</h3>
+                                <ul class="experiences__company-project-responsibilities">
+                                    <li>Бородьба з рашизмом</li>
+                                    <li>Бородьба з нацизмом</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
 
                     <div class="additional-info fv"></div>
                 </div>
