--- a/index.html
+++ b/index.html
@@ -85,7 +85,23 @@
                         </div>
                     </div>
 
-                    <div class="additional-info fv"></div>
+                    <div class="additional-info fv">
+                        <div class="additional-info__education">
+                            <h3 class="additional-info__education-header">Education</h3>
+                            <div class="additional-info__education-university">
+                                <span class="additional-info__education-university-durability">1928 </span>
+                                <h3 class="additional-info__education-university-speciality">агрономічний відділ</h3>
+                                <p class="additional-info__education-university-name">Висока Політехнічна Школа</p>
+                            </div>
+                        </div>
+
+                        <div class="additional-info__languages">
+                            <h3 class="additional-info__languages-header">Languages</h3>
+                            <p class="additional-info__languages-item">
+                                Ukrainian
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
